--- a/ReadMe
+++ b/ReadMe
@@ -1,8 +1,13 @@
+![Logo](https://faelscarpato.github.io/Coroa/images/LOGO1.png)
+
+
 # Coroa
 
 Coroa é um projeto de website de página única para uma empresa chamada Metalurgica Coroa, que oferece serviços de fabricação e instalação de estruturas metálicas. O objetivo do site é apresentar a empresa, seus produtos, seus clientes e seus contatos de forma simples e elegante.
+## Visite
 
-## Tecnologias utilizadas
+Visite o Website: https://faelscarpato.github.io/Coroa/
+## Tecnologias Utilizadas
 
 O projeto foi desenvolvido utilizando as seguintes tecnologias:
 
@@ -10,15 +15,14 @@ O projeto foi desenvolvido utilizando as seguintes tecnologias:
 - CSS
 - JavaScript
 - Bootstrap
-
-## Estrutura do projeto
+## Estrutura do Projeto
 
 O projeto consiste em um arquivo HTML principal (index.html) e uma pasta de recursos (assets), que contém os arquivos CSS, JavaScript e as imagens utilizadas no site. A pasta de recursos está dividida em três subpastas: css, js e img. A subpasta css contém o arquivo style.css, que define os estilos personalizados do site. A subpasta js contém o arquivo script.js, que implementa as funcionalidades interativas do site, como o menu responsivo e o scroll suave. A subpasta img contém as imagens em formato jpg e png que são exibidas no site, como o logo da empresa, as fotos dos produtos e dos clientes, e os ícones das redes sociais.
-
-## Como executar o projeto
+## Executando o Projeto
 
 Para executar o projeto localmente, basta clonar o repositório do GitHub e abrir o arquivo index.html em um navegador web de sua preferência. O link do repositório é: https://github.com/faelscarpato/Coroa/
-
 ## Licença
 
 O projeto está licenciado sob a licença MIT. Veja o arquivo LICENSE para mais detalhes.
+[MIT](https://choosealicense.com/licenses/mit/)
+
